--- a/src/NewSession.css
+++ b/src/NewSession.css
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     min-height: 100vh;
-    background-image: url("/public/homepagev2.png");
+    background-image: url("/public/f.jpg");
     background-size: cover;
     background-position: center;
 }
