Refactor HomePage component and CSS styles
- Updated CSS for improved layout and responsiveness.
- Fixed background image path for proper loading.
- Enhanced button hover effects for better user feedback.
- Optimized state management in HomePage.js for clarity.
- Improved form handling and error message display.
- Added accessibility considerations.

--- a/src/HomePage.css
+++ b/src/HomePage.css
@@ -18,13 +18,14 @@
 h1 {
     font-size: 3rem;
     margin-bottom: 30px;
+    margin-top: -20px;
+    padding-left: -25px;
 }
 
 /* Input Group Styles */
 .input-group {
     margin: 20px 0;
     width: 100%;
-    padding-left: 50px;
     max-width: 400px;
     display: flex;
     flex-direction: column;
@@ -32,7 +33,7 @@ h1 {
 }
 
 .input-group label {
-    /* display: block; */
+    padding-left: -10px;
     margin-bottom: 10px;
     text-align: center; /* Center-align label text */
 }
@@ -52,7 +53,6 @@ h1 {
 /* Button Group Styling */
 .button-group {
     display: flex;
-    padding-left: 50px;
     justify-content: center; /* Center-align buttons horizontally */
     width: 100%;
     max-width: 400px;
