--- a/src/NewSession.css
+++ b/src/NewSession.css
@@ -45,7 +45,7 @@
     margin-top: 5px;
     margin-bottom: 5px; /* Add margin below the storyline */
     font-size: 20px;
-    animation: fadeIn 6s ease-in-out;
+    animation: fadeIn 4s ease-in-out;
 }
 
 @keyframes fadeIn {
@@ -188,6 +188,7 @@ h1 {
 .revel-button:hover {
     background-color: #218838; /* Darker green on hover */
 }
+
 .flip-results {
     margin-top: 20px;
     background: rgba(255, 255, 255, 0.15); /* Slightly more visible background */
@@ -204,11 +205,13 @@ h1 {
     text-align: center;
     margin-bottom: 20px; /* Add space below heading */
     font-size: 28px;
-    color: #FFD700; /* Gold color for heading */
+    color: #ffffff; /* Gold color for usernames */
 }
 
 .result-card {
-    background: rgba(0, 0, 0, 0.2); /* Darken the background for contrast */
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+    background: rgba(15, 62, 204, 0.2);
+    backdrop-filter: blur(10px);
     border-radius: 8px;
     padding: 15px; /* Add padding inside the card */
     margin: 10px 0; /* Add margin between result cards */
@@ -216,6 +219,7 @@ h1 {
     justify-content: space-between;
     align-items: center;
     transition: transform 0.3s ease, background-color 0.3s ease;
+    animation: fadeIn 2s ease-in-out;
 }
 
 .result-card:hover {
@@ -225,12 +229,12 @@ h1 {
 
 .result-user {
     font-weight: bold;
-    color: #FFD700; /* Gold color for usernames */
+    color: #ffffff; /* Gold color for usernames */
     margin-right: 10px; /* Space between user name and colon */
 }
 
 .result-vote {
-    color: #ffdd57; /* A yellow-gold color for votes */
+    color: #ffffff; /* Gold color for usernames */
     font-size: 1.2rem; /* Make votes slightly larger */
 }
 
